--- a/app/views/templates/clients/lil_c/_header.html.erb
+++ b/app/views/templates/clients/lil_c/_header.html.erb
@@ -52,7 +52,7 @@
       <div class="header_links header_links_right">
         <%= link_to fa_icon("facebook"), get_lil_c_link[:facebook], target: :_blank, class: :header_icon_link %>
         <%= link_to fa_icon("instagram"), get_lil_c_link[:instagram], target: :_blank, class: :header_icon_link %>
-        <%= link_to fa_icon("apple"), get_lil_c_link[:apple], target: :_blank, class: :header_icon_link %>
+        <%= link_to fa_icon("twitter"), get_lil_c_link[:twitter], target: :_blank, class: :header_icon_link %>
         <%= link_to fa_icon("youtube-play"), get_lil_c_link[:youtube], target: :_blank, class: :header_icon_link %>
       </div>
     </div>
