--- a/app/views/templates/clients/lil_c/_nav_links.html.erb
+++ b/app/views/templates/clients/lil_c/_nav_links.html.erb
@@ -4,7 +4,7 @@
 
 <br/>
 
-<%= link_to fa_icon("facebook", "Facebook"), get_lil_c_link[:facebook], target: :_blank, class: "nav_menu_link no_select" %>
-<%= link_to fa_icon("instagram", "Instagram"), get_lil_c_link[:instagram], target: :_blank, class: "nav_menu_link no_select" %>
-<%= link_to fa_icon("twitter", "Twitter"), get_lil_c_link[:twitter], target: :_blank, class: "nav_menu_link no_select" %>
-<%= link_to fa_icon("youtube-play", "YouTube"), get_lil_c_link[:youtube], target: :_blank, class: "nav_menu_link no_select" %>
+<%= link_to fa_icon("facebook", "Facebook", "fa-lg"), get_lil_c_link[:facebook], target: :_blank, class: "nav_menu_link no_select" %>
+<%= link_to fa_icon("instagram", "Instagram", "fa-lg"), get_lil_c_link[:instagram], target: :_blank, class: "nav_menu_link no_select" %>
+<%= link_to fa_icon("twitter", "Twitter", "fa-lg"), get_lil_c_link[:twitter], target: :_blank, class: "nav_menu_link no_select" %>
+<%= link_to fa_icon("youtube-play", "YouTube", "fa-lg"), get_lil_c_link[:youtube], target: :_blank, class: "nav_menu_link no_select" %>
