Facebook verification meta tag

--- a/app/views/layouts/clients/lil_c.html.erb
+++ b/app/views/layouts/clients/lil_c.html.erb
@@ -22,6 +22,8 @@
     <meta property="og:image" content="https://forrestwebco.com/images/clients/lil_c/album.jpg" />
     <meta property="og:url" content="http://lilccorleone.com/" />
 
+    <meta name="facebook-domain-verification" content="4xrrr1mqytxsglaicg4k46vpimf755" />
+
 	  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <!-- Chrome, Firefox OS and Opera -->
